force-app/main/default/objects/OI_Org_Health_Section_Config__mdt/OI_Org_Health_Section_Config__mdt.object-meta.xml
<CustomObject>
    <label>OI Org Health Section Config</label>
    <pluralLabel>OI Org Health Section Configs</pluralLabel>
    <description
  >The Org Health section registry — one row per dashboard section (Org Overview, Metadata/Automation/Code/Security/Data Health, Storage), read by OI_OrgHealthController.getOrgHealthSummary() to drive the landing grid's order and per-section shape, mirroring OI_Node_Type_Descriptor__mdt's registry pattern (GraphUI.md §20-21). ADR-0026, ProductSpecs.md Phase 4.</description>
</CustomObject>