force-app/main/default/objects/OI_Org_Health_Section_Config__mdt/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <label>Display Label</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description>User-facing section name, e.g. "Metadata Health".</description>
</CustomField>