force-app/main/default/objects/OI_Org_Health_Section_Config__mdt/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <label>Display Order</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <required>true</required>
    <description>Landing grid and section-nav ordering, ascending.</description>
</CustomField>