force-app/main/default/objects/OI_Org_Health_Section_Config__mdt/fields/Is_Scored__c.field-meta.xml
<CustomField>
    <fullName>Is_Scored__c</fullName>
    <label>Is Scored</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description
  >False means this section is facts-only by product rule (e.g. Automation Health, Security Health — "no fake score") — the DTO/UI must never synthesize a score for it.</description>
</CustomField>