force-app/main/default/objects/OI_Org_Health_Section_Config__mdt/fields/Live_Row_Ceiling__c.field-meta.xml
<CustomField>
    <fullName>Live_Row_Ceiling__c</fullName>
    <label>Live Row Ceiling</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description
  >Optional per-section override of OI_Settings__mdt.Max_Org_Health_Live_Rows__c for this section's Tier-2 bounded aggregate queries. Null means "use the global default."</description>
</CustomField>